--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           shell: pwsh.exe
           command: |
             Install-Module -Name:('ps2exe') -Force
+            Get-Command -Module ps2exe
       - run:
           name: Build
           shell: pwsh.exe
