--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build: # name of your job
     executor: win/default # executor type
-
+    resource_class: small
     steps:
       # Commands are run in a Windows
       # virtual machine environment
@@ -18,7 +18,6 @@ jobs:
           shell: powershell.exe
           command: |
             Install-Module -Name:('ps2exe') -Force
-            Get-Command -Module ps2exe
       - run:
           name: Build
           shell: powershell.exe
