--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build: # name of your job
     executor: win/default # executor type
-    resource_class: small
+    size: small
     steps:
       # Commands are run in a Windows
       # virtual machine environment
