--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build: # name of your job
     executor: 
-      name: win/default # executor typ 
+      name: win/default # executor type
       size: small
     steps:
       # Commands are run in a Windows
