--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,7 @@ orbs:
 
 jobs:
   build: # name of your job
-    executor: 
-      name: win/default # executor type
-      size: small
+    executor: win/default # executor type
     steps:
       # Commands are run in a Windows
       # virtual machine environment
