--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,19 +53,21 @@ jobs:
           shell: powershell.exe
           command: |
             Install-Module -Name:('ps2exe') -Force
-            Write-Host "dir ./"
-            dir ./
-            Write-Host "dir ./Deploy"
-            dir ./Deploy
       - run:
           name: Build
           shell: powershell.exe
           command: |
             $ErrorActionPreference = 'Stop'
             ./Deploy/Build.ps1
+      -persist_to_workspace:
+          root: .
+          paths:
+            - .
   Test Setup:
     executor: win/default
     steps:
+      - attach_workspace:
+          at: .
       - run:
           name: Check directory
           command: |
