--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
   Pester Tests:
     executor: win/default
     steps:
+      - attach_workspace:
+          at: .
       - run:
           name: Invoke Pester
           shell: powershell.exe
