--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
           command: |
             Install-Module -Name:('ps2exe') -Force
             Install-Module -Name:('Pester') -Force
+            Install-Module -Name:('PSScriptAnalyzer') -Force
       - run:
           name: Build
           shell: powershell.exe
