--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,17 +64,17 @@ jobs:
           root: .
           paths:
             - .
-  # Test Setup:
-  #   executor: win/default
-  #   steps:
-  #     - attach_workspace:
-  #         at: .
-  #     - run:
-  #         name: Test Setup
-  #         shell: powershell.exe
-  #         command: |
-  #           $ErrorActionPreference = 'Stop'
-  #           . ./Deploy/TestSetup.ps1 -TestOrgConnectKey:($env:PesterConnectKey)
+  Test Setup:
+    executor: win/default
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Test Setup
+          shell: powershell.exe
+          command: |
+            $ErrorActionPreference = 'Stop'
+            . ./Deploy/TestSetup.ps1 -TestOrgConnectKey:($env:PesterConnectKey)
   Pester Tests:
     executor: win/default
     steps:
