--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,8 @@ jobs:
             Install-Module -Name:('PSScriptAnalyzer') -Force
             Install-Module -Name:('Pester') -Force -RequiredVersion 4.10.1
             Install-Module -Name:('JumpCloud') -Force
+            write-host $ENV:JCOrgID
+            write-host $ENV:JCApiKey
       - run:
           name: Invoke Pester
           shell: powershell.exe
