--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,16 @@ jobs:
             Install-Module -Name:('PSScriptAnalyzer') -Force
             Install-Module -Name:('Pester') -Force -RequiredVersion 4.10.1
             Install-Module -Name:('JumpCloud') -Force
+            $env:JCApiKey = $JCApiKey
+            $env:JCOrgId = $JCOrgId
+            If (-not [System.String]::IsNullOrEmpty($env:JCApiKey) -and -not [System.String]::IsNullOrEmpty($env:JCOrgId))
+            {
+                Write-Host ('[VALIDATION] JCApiKey AND JCOrgId have been populated.') -BackgroundColor:('Black') -ForegroundColor:('Magenta')
+            }
+            Else
+            {
+                Write-Error ("Unable to test because JCApiKey and JCOrgId have not been set.")
+            }
       - run:
           name: Invoke Pester
           shell: powershell.exe
