--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,11 +73,11 @@ jobs:
             Install-Module -Name:('PSScriptAnalyzer') -Force
             Install-Module -Name:('Pester') -Force -RequiredVersion 4.10.1
             Install-Module -Name:('JumpCloud') -Force
-            $env:JCApiKey = $JCApiKey
-            $env:JCOrgId = $JCOrgId
+            # $env:JCApiKey = $JCApiKey
+            # $env:JCOrgId = $JCOrgId
             If (-not [System.String]::IsNullOrEmpty($env:JCApiKey) -and -not [System.String]::IsNullOrEmpty($env:JCOrgId))
             {
-                Write-Host ('[VALIDATION] JCApiKey AND JCOrgId have been populated.') -BackgroundColor:('Black') -ForegroundColor:('Magenta')
+                Write-Host ('[VALIDATION] JCApiKey AND JCOrgId have been populated.')
             }
             Else
             {
