build tests params

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,9 @@
 version: 2.1
+parameters:
+  buildReleaseType:
+    description: 'Semantic Version increment type of the release. Valid values: major, minor, build'
+    type: string
+    default: build
 orbs:
   win: circleci/windows@2.2.0
 build-and-sign-ADMU: &build-and-sign-ADMU
