--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,12 +136,14 @@ jobs:
   Build Nuspec:
     executor: win/default
     steps:
+      - attach_workspace:
+          at: .
       - run:
           name: Build .nuspec
           shell: powershell.exe
           command: |
             $ErrorActionPreference = 'Stop'
-            ./Deploy/BuildNuspecFromPsd1.ps1
+            ./Deploy/BuildNuspecFromPsd1.ps1 ModuleVersionType:("<< pipeline.parameters.buildReleaseType >>") -ModuleName:('JumpCloud.ADMU')
   
 
   
