--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,6 +172,10 @@ jobs:
             Install-Module -Name PowerShellGet -AllowPrerelease -RequiredVersion '3.0.0-beta10' -Force
             Install-Module -Name AWS.Tools.Common -Force
             Install-Module -Name AWS.Tools.CodeArtifact -Force
+            if ( -not ( Test-Path -Path ./Deploy/utils ) ) {
+              mkdir ./Deploy/utils
+              wget https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe -Outfile ./Download_Test/nuget.exe
+            }
       - run:
           name: Add nuget sources
           command: |
@@ -197,7 +201,6 @@ commands:
           shell: pwsh.exe
           command: |
             $NupkgPath = (Get-ChildItem -Path:("./*.nupkg")).FullName
-            Write-Host $NupkgPath
             If('<< parameters.source >>' -eq 'CodeArtifact'){dotnet nuget push $NupkgPath --source << parameters.source >>}
             ElseIf('<< parameters.source >>' -eq 'PSGallery'){dotnet nuget push $NupkgPath --source << parameters.source >> --api-key $env:NuGetApiKey}
             Else {Write-Error "Unknown source value: << parameters.source >>"}
