--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,47 +1,47 @@
 version: 2.1
 parameters:
   buildReleaseType:
-    description: 'Semantic Version increment type of the release. Valid values: major, minor, build'
-    default: "build"
+    description: 'Semantic Version increment type of the release. Valid values: major, minor, patch'
+    default: "patch"
     type: enum
-    enum: ["major", "minor", "build"]
+    enum: ["major", "minor", "patch"]
 orbs:
   win: circleci/windows@2.2.0
 build-and-sign-ADMU: &build-and-sign-ADMU
   - Build
-  # - Pester Tests:
-  #     requires:
-  #       - Build
+  - Pester Tests:
+      requires:
+        - Build
   #- Sign Executable:
   #    requires:
   #      - Build
-  #      # - Pester Tests
+      #  - Pester Tests
   #    context: secrethub-credentials
   - Build Module:
       requires:
         - Build
-        # - Pester Tests
+        - Pester Tests
         # - Sign Executable
   - Build Help Files:
       requires:
         - Build
-        # - Pester Tests
+        - Pester Tests
         # - Sign Executable
         - Build Module
   - Build Nuspec:
       requires:
         - Build
-        # - Pester Tests
+        - Pester Tests
         # - Sign Executable
         - Build Module
         - Build Help Files
   - Publish:
       requires:
         - Build
-        # - Pester Tests
+        - Pester Tests
         # - Sign Executable
-        # - Build Module
-        # - Build Help Files
+        - Build Module
+        - Build Help Files
         - Build Nuspec
       context: aws-credentials
 workflows:
