sign step testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,34 +12,34 @@ build-and-sign-ADMU: &build-and-sign-ADMU
   - Pester Tests:
       requires:
         - Build
-  #- Sign Executable:
-  #    requires:
-  #      - Build
-      #  - Pester Tests
-  #    context: secrethub-credentials
+  - Sign Executable:
+     requires:
+       - Build
+       - Pester Tests
+     context: secrethub-credentials
   - Build Module:
       requires:
         - Build
         - Pester Tests
-        # - Sign Executable
+        - Sign Executable
   - Build Help Files:
       requires:
         - Build
         - Pester Tests
-        # - Sign Executable
+        - Sign Executable
         - Build Module
   - Build Nuspec:
       requires:
         - Build
         - Pester Tests
-        # - Sign Executable
+        - Sign Executable
         - Build Module
         - Build Help Files
   - Publish:
       requires:
         - Build
         - Pester Tests
-        # - Sign Executable
+        - Sign Executable
         - Build Module
         - Build Help Files
         - Build Nuspec
