--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,14 +35,14 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         # - Sign Executable
         - Build Module
         - Build Help Files
-  # - Publish:
-  #     requires:
-  #       - Build
-  #       - Pester Tests
-  #       # - Sign Executable
-  #       - Build Module
-  #       - Build Help Files
-  #       - Build Nuspec
+  - Publish:
+      requires:
+        - Build
+        - Pester Tests
+        # - Sign Executable
+        - Build Module
+        - Build Help Files
+        - Build Nuspec
       context: aws-credentials
 workflows:
   version: 2
