--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
             Install-Module -Name AWS.Tools.CodeArtifact -Force
             if ( -not ( Test-Path -Path ./Deploy/utils ) ) {
               mkdir ./Deploy/utils
-              wget https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe -Outfile ./Deploy/utils/nuget.exe
+              invoke-WebRequest https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe -Outfile ./Deploy/utils/nuget.exe
             }
       - run:
           name: Add nuget sources
